--- a/tpAPI/css/main.css
+++ b/tpAPI/css/main.css
@@ -1,12 +1,9 @@
 *{
+    margin: 0;
+    padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
-/*TAGs*/
-body{
-    padding: 0px;
-    margin: 0px;
-}
 /*IDs*/
 #favUs{
     background-color: whitesmoke;
@@ -17,6 +14,15 @@ body{
 }
 /*CLASSes*/
 
+.encabezado{
+    top: 4ems;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.encabezado h2{
+    color:white;
+}
 
 .background{
     background-color: #6441A4; 
