--- a/tpAPI/css/main.css
+++ b/tpAPI/css/main.css
@@ -10,7 +10,7 @@
     border-radius: 30px;
     margin: 0 auto;
     width: 80%;
-    padding: 15px;
+    padding: 15px 15px 65px 15px;
 }
 /*CLASSes*/
 
@@ -27,7 +27,8 @@
 .background{
     background-color: #6441A4; 
     width: 100%;
-    height: 800px;
+    height: auto;
+    padding-bottom: 50px;
 }
 
 .header{
@@ -48,7 +49,7 @@
 }
 .row{
     width: 90%;
-    height: 50px;
+    height: 250px;
 }
 .logoF{ 
     width: 45px;
@@ -56,8 +57,8 @@
 
 }
 .usuarioF{
-    text-align: center;
+    text-align: right;
 }
 .statusF{
-    text-align: center;
+    text-align: right;
 }
