--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,6 +32,7 @@
 .part1 img {
     width: 145px;
     height: 145px;
+    border-radius: 50%;
 }
 
 .encabezado h2 {
@@ -114,6 +115,20 @@
 }
 
 @media (max-width: 678px) {
+    .encabezado {
+        flex-direction: column;
+        align-items: center;
+        margin: 20px 0;
+    }
+
+    .encabezado h2 {
+        margin: 0;
+    }
+
+    .part1 img, .part1 {
+        padding: 0;
+    }
+
     .logoF {
         margin-bottom: 15px;
     }
