regreso el morado

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -51,7 +51,7 @@
 }
 
 .background {
-    background-color: #4b367b;
+    background-color: #6441A4;
     width: 100%;
     height: auto;
     padding-bottom: 50px;
